--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -18,7 +18,8 @@ const flashOffers = [
         price: 4.95,
         oldPrice: 12.99,
         link: "https://amzn.to/49iQsJ7",
-        img: "https://m.media-amazon.com/images/I/61GuideB1RL._AC_SX679_.jpg", 
+        // FOTO CORREGIDA AQUÍ ABAJO 👇
+        img: "https://m.media-amazon.com/images/I/61hzuoXwjqL._AC_SY300_SX300_QL70_ML2_.jpg", 
         discount: "-60%"
     }
 ];
