--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -18,9 +18,17 @@ const flashOffers = [
         price: 4.95,
         oldPrice: 12.99,
         link: "https://amzn.to/49iQsJ7",
-        // FOTO CORREGIDA AQUÍ ABAJO 👇
         img: "https://m.media-amazon.com/images/I/61hzuoXwjqL._AC_SY300_SX300_QL70_ML2_.jpg", 
         discount: "-60%"
+    },
+    {
+        name: "Portátil 14'' FHD (8GB RAM + 256GB SSD)",
+        desc: "El rey del bajo coste. Windows 11, ligero y perfecto para estudiantes.",
+        price: 279.99,
+        oldPrice: 999.00,
+        link: "https://amzn.to/4qqhbKI",
+        img: "https://m.media-amazon.com/images/I/71WQY0brEFL._AC_SX679_.jpg",
+        discount: "-72%"
     }
 ];
 
