cambio nommbre web

--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -70,7 +70,7 @@ const ramOptions = ["8GB", "16GB", "32GB"];
     </script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laptop Comparator - Encuentra tu Portátil Ideal</title>
+    <title>MasterTech | Las Mejores Ofertas en Tecnología</title>
     <meta name="description" content="Comparador de portátiles en España. Ofertas Gaming, Estudiantes y Ultrabooks. Análisis técnico sin marketing." />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
